@@ -6,6 +6,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ## [Unreleased] - <>
 ### ADDED
 - Use windows console to get proper desktop path
+- Fix using plus and minus for zooming on windows
 
 ## [v0.7.6] - 2020-05-08
 ### Added
